Update q-and-a.mdx to fix dollar sign formatting

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -12,10 +12,10 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
   Covers temporary issues currently under investigation. Entries will be removed once resolved.  
 
 - 🌱 [Withdrawals FAQ](#-withdrawals-faq)  
-  Covers how to withdraw $FLOWER, ETH requirements, shared network errors, and IP concerns.
+  Covers how to withdraw \$FLOWER, ETH requirements, shared network errors, and IP concerns.
 
 - 💰 [Deposits FAQ](#-deposits-faq)  
-  Covers what tokens can be deposited, wrong token deposits, and why only $FLOWER is accepted.
+  Covers what tokens can be deposited, wrong token deposits, and why only \$FLOWER is accepted.
 
 - ⚠️ [Game Errors FAQ](#-game-errors-faq)  
   Covers general gameplay/system errors, including shared network error details.
@@ -37,14 +37,14 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
   
 ## 🌱 Withdrawals FAQ
 
-### How can I withdraw $FLOWER?
-You can withdraw $FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
+### How can I withdraw \$FLOWER?
+You can withdraw \$FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
 This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
 
 ---
 
 ### Do I need ETH to withdraw?
-Yes, you need ETH to cover the gas fees when withdrawing $FLOWER. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using.  
+Yes, you need ETH to cover the gas fees when withdrawing \$FLOWER. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using.  
 Make sure to buy and transfer ETH on the **Base Network**, since only ETH on Base is accepted for withdrawals.  
 This requirement exists because blockchain transactions need ETH to process securely, and the Base Network ensures compatibility with SunflowerLand.
 
@@ -82,7 +82,7 @@ This waiting time is part of the system’s security checks, so changing your ne
 ## 💰 Deposits FAQ
 
 ### What tokens can I deposit?
-Only **$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
+Only **\$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
 
 ---
 
