Clarify token recovery in Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -87,7 +87,7 @@ Only **\$FLOWER** is recognized by the deposit address. Any other tokens sent wi
 ---
 
 ### I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
-No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes $FLOWER.  
+No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes \$FLOWER.  
 If you send ETH or any other token to this address, the system cannot recover or refund it because the contract is not designed to handle anything except $FLOWER.  
 This rule exists to protect the integrity of the game economy and ensure deposits are processed securely.
 
