Add $FLOWER in-game deposit instructions

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -81,6 +81,11 @@ This waiting time is part of the system’s security checks, so changing your ne
 
 ## 💰 Deposits FAQ
 
+### How can I deposit \$FLOWER in‑game?  
+Click the **Gem icon**, select **Deposit $FLOWER**, and choose whether to use your linked wallet or enter a different wallet address. This process lets you securely move tokens back into SunflowerLand for gameplay.  
+
+---
+
 ### What tokens can I deposit?
 Only **\$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
 
@@ -97,12 +102,25 @@ This rule exists to protect the integrity of the game economy and ensure deposit
 The deposit contract is designed specifically for $FLOWER to ensure secure and consistent transactions within SunflowerLand.  
 Allowing other tokens would risk errors and compromise the game economy.
 
+---
+
+### I made a deposit but it’s not showing in my account  
+Open the **Gem icon** in the upper‑right corner, select **Deposit \$FLOWER**, and confirm you’re using the correct network where the deposit was made. After that, hit the **Refresh** button to update your balance.  
+
 ## ⚠️ Game Errors FAQ
 
 ### Why do I get a "shared network error" if my network isn’t shared?
 Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
 If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
 This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
+
+---
+
+### I get a white screen when opening the SunflowerLand app  
+Try clearing your browser’s cache to fix the issue. Cached data often causes loading problems, and refreshing the cache helps the app display correctly.  
+
+- [Clear cache in Chrome, Firefox, and other browsers (Google Support)](https://support.google.com/accounts/answer/32050)  
+- [Clear cache in Safari on iPhone/iPad (Apple Support)](https://support.apple.com/en-us/HT201265)  
 
 ---
 
@@ -115,6 +133,12 @@ This security measure was added to prevent abuse of withdrawals and ensure fair 
 ### How to fix "shared network error" on withdrawal?
 If you see a shared network error, you need to wait **14 days** from when the error first appeared.  
 This waiting time is required by the system’s security process, so retrying earlier will not work.
+
+---
+
+### I am unable to claim my sale in the in‑game marketplace  
+Check if you have any pending withdrawal transactions. If you do, you’ll need to complete or clear that pending withdrawal first before you can claim your marketplace sale.  
+
 
 ## 🔑 Account Verification FAQ
 
@@ -131,6 +155,12 @@ This waiting time is required by the system’s security process, so retrying ea
 
 **Important:**  
 If you are having issues verifying, it usually means you are using the wrong Discord or Telegram account. Please ensure you are logged into the correct account that is linked to your game profile.
+
+---
+
+### I want to unlink my Discord or Telegram from this account  
+Unlinking Discord and Telegram accounts is currently disabled. This measure was introduced to prevent misuse by bad actors who were leveraging account unlinking for multi‑accounting.  https://discord.com/channels/880987707214544966/1174503269238837408/1396928727040131094
+
 
 ## 🛡️ Bans & Re‑Verification FAQ
 
