Update Q&A with new tags and sections, add to docs.json

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -1,247 +1,191 @@
 ---
 title: "Common Support Q&A"
 category: "Account & Technical Support"
-tags: ["wallets", "withdrawals", "deposits", "tokens", "network", "errors", "transactions", "ongoing-issues"]
+tags: ["wallets", "withdrawals", "deposits", "tokens", "network", "errors", "transactions", "ongoing-issues", "verification", "bans"]
 ---
 
 # 📖 SunflowerLand FAQ Index
 
 Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navigation:
 
-- 🛠️ [Ongoing Issues FAQ](#-ongoing-issues-faq)  
-  Covers temporary issues currently under investigation. Entries will be removed once resolved.  
+- 🛠️ [Ongoing Issues FAQ](#ongoing-issues-faq)  
+- 🌱 [Withdrawals FAQ](#withdrawals-faq)  
+- 💰 [Deposits FAQ](#deposits-faq)  
+- ⚠️ [Game Errors FAQ](#game-errors-faq)  
+- 🔑 [Account Verification FAQ](#account-verification-faq)  
+- 🛡️ [Bans & Re‑Verification FAQ](#bans--re-verification-faq)  
+- 🕰️ [Discontinued & Not Recommended FAQ](#discontinued--not-recommended-faq)  
+- 🌐 [Network Transactions FAQ](#network-transactions-faq)  
 
-- 🌱 [Withdrawals FAQ](#-withdrawals-faq)  
-  Covers how to withdraw \$FLOWER, ETH requirements, shared network errors, and IP concerns.
-
-- 💰 [Deposits FAQ](#-deposits-faq)  
-  Covers what tokens can be deposited, wrong token deposits, and why only \$FLOWER is accepted.
-
-- ⚠️ [Game Errors FAQ](#-game-errors-faq)  
-  Covers general gameplay/system errors, including shared network error details.
-
-- 🔑 [Account Verification FAQ](#-account-verification-faq)  
-  Covers Discord and Telegram verification steps, and troubleshooting if you’re using the wrong linked account.
-
-- 🛡️ [Bans & Re‑Verification FAQ](#-bans--re-verification-faq)  
-  Covers rules about bans, re‑verification, and requirements for new accounts.
-
-- 🕰️ [Discontinued & Not Recommended FAQ](#-discontinued--not-recommended-faq)  
-  Covers expired items/features and practices that are discouraged due to risks or lack of support. 
-
-- 🌐 [Network Transactions FAQ](#-network-transactions-faq)  
-  Covers issues with blockchain transactions, including gas fees, pending/stuck transfers, and network congestion.
+---
 
 ## 🛠️ Ongoing Issues FAQ
+*(Temporary issues currently under investigation. Entries will be removed once resolved.)*
 
-  
+---
+
 ## 🌱 Withdrawals FAQ
 
-### How can I withdraw \$FLOWER?
-You can withdraw \$FLOWER by going to the Retreat (click the Map icon) and walking up to the goblin with a wallet icon. Click the $FLOWER icon and choose the network you’d like to receive your tokens on — either **Ronin** or **Base Network**.  
-This process exists because withdrawals must be initiated in‑game and directed to a supported blockchain network to ensure secure transfers.
+### Withdrawals: How can I withdraw $FLOWER?
+Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click the $FLOWER icon, and choose **Ronin** or **Base Network**. Withdrawals must be initiated in‑game and directed to a supported blockchain.
 
 ---
 
-### Do I need ETH to withdraw?
-Yes, you need ETH to cover the gas fees when withdrawing \$FLOWER. You can purchase ETH through exchanges like Binance or Coinbase, or directly from the wallet provider you’re using.  
-Make sure to buy and transfer ETH on the **Base Network**, since only ETH on Base is accepted for withdrawals.  
-This requirement exists because blockchain transactions need ETH to process securely, and the Base Network ensures compatibility with SunflowerLand.
+### Withdrawals: Do I need ETH to withdraw?
+Yes. ETH is required to cover gas fees. Buy ETH on the **Base Network** (via Binance, Coinbase, or your wallet provider). Only ETH on Base is accepted.
 
 ---
 
-### How to fix "shared network error" on withdrawal?
-If you see a shared network error, you need to wait **14 days** from when the error first appeared.  
-This waiting time is required by the system’s security process, so retrying earlier will not work.
+### Withdrawals: How to fix "shared network error"?
+You must wait **14 days** from when the error first appeared. This is part of the system’s security process.
 
 ---
 
-### When was the "shared network error" implemented?
-The shared network error was implemented on **January 12, 2026**.  
-This security measure was added to prevent abuse of withdrawals and ensure fair play. If you encounter this error, you’ll need to wait the required **14‑day period** before trying again.
+### Withdrawals: When was the "shared network error" implemented?
+On **January 12, 2026**. It prevents abuse of withdrawals and ensures fair play.
 
 ---
 
-### Why do I get a "shared network error" if my network isn’t shared?
-Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
-If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
-This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
+### Withdrawals: Why do I get a "shared network error" if my network isn’t shared?
+Most ISPs use **dynamic IPs**. If another player used the same IP recently, the system applies the 14‑day wait.
 
 ---
 
-### Do I need to change my network/IP before waiting two weeks for a withdrawal?
-No, you don’t need to change your IP address or network settings. The important step is to wait the full **two‑week period** before trying another withdrawal.  
-This waiting time is part of the system’s security checks, so changing your network won’t speed it up.
+### Withdrawals: Do I need to change my IP?
+No. Just wait the full **two‑week period**. Changing your IP won’t bypass the rule.
 
-**What to do:**  
-- Try increasing the gas limit and/or gas price.  
-- Check if you have pending transactions and clear them.  
-- Ensure you’re connected to a reliable RPC endpoint.  
-- If the issue persists, wait until network congestion eases and retry.
+---
 
 ## 💰 Deposits FAQ
 
-### How can I deposit \$FLOWER in‑game?  
-Click the **Gem icon**, select **Deposit $FLOWER**, and choose whether to use your linked wallet or enter a different wallet address. This process lets you securely move tokens back into SunflowerLand for gameplay.  
+### Deposits: How can I deposit $FLOWER in‑game?
+Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked wallet or enter another address.
 
 ---
 
-### What tokens can I deposit?
-Only **\$FLOWER** is recognized by the deposit address. Any other tokens sent will not be processed.
+### Deposits: What tokens can I deposit?
+Only **$FLOWER**. Other tokens are not recognized.
 
 ---
 
-### I accidentally sent ETH (or another token) to my deposit address. Can it be returned?
-No, tokens sent to the deposit address cannot be returned. The deposit address is a **contract address** that only recognizes \$FLOWER.  
-If you send ETH or any other token to this address, the system cannot recover or refund it because the contract is not designed to handle anything except $FLOWER.  
-This rule exists to protect the integrity of the game economy and ensure deposits are processed securely.
+### Deposits: I accidentally sent ETH (or another token). Can it be returned?
+No. The deposit contract only recognizes $FLOWER. Other tokens cannot be recovered.
 
 ---
 
-### Why is only $FLOWER accepted?
-The deposit contract is designed specifically for $FLOWER to ensure secure and consistent transactions within SunflowerLand.  
-Allowing other tokens would risk errors and compromise the game economy.
+### Deposits: Why is only $FLOWER accepted?
+The contract is designed specifically for $FLOWER to protect the game economy.
 
 ---
 
-### I made a deposit but it’s not showing in my account  
-Open the **Gem icon** in the upper‑right corner, select **Deposit \$FLOWER**, and confirm you’re using the correct network where the deposit was made. After that, hit the **Refresh** button to update your balance.  
+### Deposits: My deposit isn’t showing
+Open the **Gem icon**, select **Deposit $FLOWER**, confirm the correct network, and hit **Refresh**.
+
+---
 
 ## ⚠️ Game Errors FAQ
 
-### Why do I get a "shared network error" if my network isn’t shared?
-Even if your network isn’t shared, most Internet service providers use **dynamic IP addresses**. This means your IP address can change over time and may be temporarily assigned to another user.  
-If another player using the same IP has already made a withdrawal, the system will detect it as a shared network and apply the **14‑day waiting period**.  
-This rule exists to prevent multiple withdrawals from the same IP in a short time, ensuring fairness and security.
+### Errors: I get a white screen when opening the app
+Clear your browser cache:  
+- [Google Support](https://support.google.com/accounts/answer/32050)  
+- [Apple Support](https://support.apple.com/en-us/HT201265)
 
 ---
 
-### I get a white screen when opening the SunflowerLand app  
-Try clearing your browser’s cache to fix the issue. Cached data often causes loading problems, and refreshing the cache helps the app display correctly.  
-
-- [Clear cache in Chrome, Firefox, and other browsers (Google Support)](https://support.google.com/accounts/answer/32050)  
-- [Clear cache in Safari on iPhone/iPad (Apple Support)](https://support.apple.com/en-us/HT201265)  
+### Errors: I am unable to claim my marketplace sale
+Check for pending withdrawals. Complete or clear them before claiming sales.
 
 ---
 
-### When was the "shared network error" implemented?
-The shared network error was implemented on **January 12, 2026**.  
-This security measure was added to prevent abuse of withdrawals and ensure fair play. If you encounter this error, you’ll need to wait the required **14‑day period** before trying again.
+*(For shared network error details, see [Withdrawals FAQ](#withdrawals-faq).)*
 
 ---
-
-### How to fix "shared network error" on withdrawal?
-If you see a shared network error, you need to wait **14 days** from when the error first appeared.  
-This waiting time is required by the system’s security process, so retrying earlier will not work.
-
----
-
-### I am unable to claim my sale in the in‑game marketplace  
-Check if you have any pending withdrawal transactions. If you do, you’ll need to complete or clear that pending withdrawal first before you can claim your marketplace sale.  
-
 
 ## 🔑 Account Verification FAQ
 
-### I cannot verify my Discord account
-**For Discord**  
-1. Go to [this channel](https://discord.com/channels/880987707214544966/925940397237219369) and agree to the terms and conditions of the game.  
-2. Go to [this channel](https://discord.com/channels/880987707214544966/1361122506655666367) and type `/verify`. Make sure to include the slash `/`.  
-3. Go back to your game and complete the face verification.
+### Verification: I cannot verify my Discord account
+**Discord**  
+1. Go to [this channel](https://discord.com/channels/880987707214544966/925940397237219369) and agree to terms.  
+2. Go to [this channel](https://discord.com/channels/880987707214544966/1361122506655666367) and type `/verify`.  
+3. Return to the game and complete face verification.
 
-**For Telegram**  
+**Telegram**  
 1. Go to **PumpkinPete Bot**.  
-2. Type `/verify`. Make sure to include the slash `/`.  
-3. Go back to your game and complete the face verification.
+2. Type `/verify`.  
+3. Return to the game and complete face verification.
 
-**Important:**  
-If you are having issues verifying, it usually means you are using the wrong Discord or Telegram account. Please ensure you are logged into the correct account that is linked to your game profile.
+**Important:** Ensure you’re logged into the correct linked account.
 
 ---
 
-### I want to unlink my Discord or Telegram from this account  
-Unlinking Discord and Telegram accounts is currently disabled. This measure was introduced to prevent misuse by bad actors who were leveraging account unlinking for multi‑accounting.  https://discord.com/channels/880987707214544966/1174503269238837408/1396928727040131094
+### Verification: I want to unlink my Discord or Telegram
+Unlinking is currently disabled to prevent misuse.  
+[See Discord announcement](https://discord.com/channels/880987707214544966/1174503269238837408/1396928727040131094)
 
+---
 
 ## 🛡️ Bans & Re‑Verification FAQ
 
-### I accidentally created two accounts. My face verification is linked to the old account, but I want to use my new one. Can you reset the face verification for me?
-No, the face verification cannot be reset or transferred between accounts.  
-If you want to use your new account, you must actively play it for **30 days** before you can submit a request for re‑verification.  
-This rule ensures that new accounts are genuine and not created just to bypass restrictions.
+### Bans: I accidentally created two accounts
+Face verification cannot be reset or transferred. Play the new account for **30 days** before requesting re‑verification.
 
 ---
 
-### The in‑game marketplace requires face verification. How can I use the marketplace to boost my new account?
-Unfortunately, this is one of the **cons of creating a new account immediately after discarding the old one**.  
-You will not be able to access the marketplace until you have actively played your new account for **30 days** and then requested re‑verification.  
-This rule ensures fairness and prevents players from bypassing restrictions by quickly switching accounts.
+### Bans: Marketplace requires face verification
+You must actively play the new account for **30 days** before re‑verification. Marketplace access is locked until then.
 
 ---
 
-### If I create a new account and scan my face again, and I only use one device, will I get banned again?
-You will not be banned for doing that.  
-However, you must actively play the new farm for **30 days** before you can submit a request for re‑verification.  
-This rule ensures that new accounts are genuine and not created just to bypass restrictions.
+### Bans: Will I get banned again if I scan my face on a new account?
+No, but you must play for **30 days** before re‑verification.
 
 ---
 
-### Can I use my friend’s device (mobile phone, computer, or laptop) so I can log in because the device I am using is broken?
-No. Logging into your farm from a friend’s device is considered **account sharing**.  
-This action violates the rules and will result in a **permanent ban** on your account.  
-The penalty cannot be lifted, as it would be unfair to other players who received the same punishment.
+### Bans: Can I log in on a friend’s device?
+No. This is **account sharing** and results in a permanent ban.
 
 ---
 
-### I want to appeal my ban. What should I do?
-If you have submitted a support ticket, please **wait for a support team member to review your case**.  
-Ban appeals cannot be processed through the FAQ or by AI assistance — only the Sunflower Land support team can investigate and decide on appeals.  
+### Bans: I want to appeal my ban
+Submit a support ticket and wait for review. Appeals are case‑by‑case and permanent bans are rarely overturned.
 
-Please note:  
-- Appeals are handled on a case‑by‑case basis.  
-- There is no guarantee that a ban will be overturned.  
-- Permanent bans for rule violations (such as account sharing) are generally not reversible.
-
+---
 
 ## 🕰️ Discontinued & Not Recommended FAQ
 
-### I bought the Ronin Land pass but haven't received it in the game. Why is that?
-You will not be able to use it anymore, as the **Bronze and Silver land passes have already expired**.  
-We do not have control over this — the passes are being resold by players themselves.  
-These land passes were never intended to be sold, since they were originally distributed as part of an **airdrop conducted a few months ago**.
+### Discontinued: I bought a Ronin Land pass
+Bronze and Silver passes have expired. They were originally distributed via airdrop and are now resold by players. SunflowerLand does not support or guarantee their validity.
 
 ---
 
-### I bought a Sunflower Land account on OpenSea but it has missing items. Why is that?
-We do not recommend purchasing lands because the metadata is not always accurate.  
-When you review the land details, you will see a clear warning:  
+### Discontinued: I bought a Sunflower Land account on OpenSea
+We strongly advise against buying accounts. Metadata is often inaccurate, and items/progress may not match.  
+*"We do not recommend trading this NFT. Accounts may be banned and/or items may not match the account’s value."*
 
-*"We do not recommend trading this NFT. Accounts may be banned and/or items may not match the account’s value. There is no guarantee that wearables, bumpkins, experience, progress, skills, or collectibles will remain after trade."*  
-
-Because these accounts are being resold by players, there is no guarantee that the items or progress shown will match what you actually receive. This is why we strongly advise against buying accounts through OpenSea or other marketplaces.
+---
 
 ## 🌐 Network Transactions FAQ
 
-### I have enough gas fee but I cannot proceed with the transaction. Why is that?
-Even if you have enough ETH to cover gas fees, transactions can still fail or get stuck for several reasons:
-
-- **Network congestion**: When many people are using base, transactions may remain pending or fail if the gas price is too low compared to current demand.  
-- **Gas limit too low**: If the gas limit is set below what the transaction requires, it can run out of gas before completion and fail.  
-- **Nonce conflicts**: Ethereum uses a “nonce” (sequence number) for each transaction. If you have pending or stuck transactions, new ones may not process until the earlier ones are cleared.  
-- **Smart contract errors**: If you’re interacting with a contract (e.g., marketplace, farming logic), the contract itself may reject the transaction even if gas is sufficient.  
-- **Wallet/network issues**: Wallets (like MetaMask) or RPC endpoints sometimes experience delays or errors, causing transactions to fail despite sufficient gas.   
-
----
-
-### Why does my transaction stay pending even though I have enough gas?
-Pending transactions often happen due to **network congestion**. If many users are submitting transactions at the same time, your transaction may wait in the mempool until miners/validators pick it up.  
-- If your gas price is lower than the current market rate, it may remain pending for a long time.  
-- You can speed it up by increasing the gas price or using the “speed up” option in your wallet.
+### Transactions: I have enough gas fee but cannot proceed
+Possible causes:  
+- Network congestion  
+- Gas limit too low  
+- Nonce conflicts  
+- Smart contract errors  
+- Wallet/RPC issues
 
 ---
 
-### What should I do if my transaction is stuck?
-1. Check if you have **pending transactions** in your wallet.  
-2. Use the **“cancel” or “speed up”** option in your wallet to clear or replace the stuck transaction.  
-3. Increase the **gas price** to match current network demand.  
-4. Switch to a more reliable **RPC endpoint** if your current one is slow or overloaded.  
-5. Wait until **network congestion eases** and retry.
+### Transactions: Why does my transaction stay pending?
+Usually due to **network congestion**. If your gas price is too low, it may remain pending. Use “speed up” in your wallet.
+
+---
+
+### Transactions: What should I do if my transaction is stuck?
+1. Check pending transactions.  
+2. Use “cancel” or “speed up.”  
+3. Increase gas price.  
+4. Switch to a reliable RPC endpoint.  
+5. Wait until congestion eases and retry.
+
+---
