Refine Q&A section headings and withdrawal questions

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -19,80 +19,80 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 
 ---
 
-## 🛠️ Ongoing Issues FAQ
+## Ongoing Issues FAQ
 *(Temporary issues currently under investigation. Entries will be removed once resolved.)*
 
 ---
 
-## 🌱 Withdrawals FAQ
+## Withdrawals FAQ
 
-### Withdrawals: How can I withdraw $FLOWER?
-Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click the $FLOWER icon, and choose **Ronin** or **Base Network**. Withdrawals must be initiated in‑game and directed to a supported blockchain.
-
----
-
-### Withdrawals: Do I need ETH to withdraw?
-Yes. ETH is required to cover gas fees. Buy ETH on the **Base Network** (via Binance, Coinbase, or your wallet provider). Only ETH on Base is accepted.
+### How can I withdraw $FLOWER?
+Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click the $FLOWER icon, and choose **Ronin** or **Base Network**.
 
 ---
 
-### Withdrawals: How to fix "shared network error"?
-You must wait **14 days** from when the error first appeared. This is part of the system’s security process.
+### Do I need ETH to withdraw?
+Yes. ETH is required to cover gas fees. Buy ETH on the **Base Network**. Only ETH on Base is accepted.
 
 ---
 
-### Withdrawals: When was the "shared network error" implemented?
-On **January 12, 2026**. It prevents abuse of withdrawals and ensures fair play.
+### How to fix "shared network error"?
+Wait **14 days** from when the error first appeared. This is part of the system’s security process.
 
 ---
 
-### Withdrawals: Why do I get a "shared network error" if my network isn’t shared?
+### When was the "shared network error" implemented?
+On **January 12, 2026**.
+
+---
+
+### Why do I get a "shared network error" if my network isn’t shared?
 Most ISPs use **dynamic IPs**. If another player used the same IP recently, the system applies the 14‑day wait.
 
 ---
 
-### Withdrawals: Do I need to change my IP?
-No. Just wait the full **two‑week period**. Changing your IP won’t bypass the rule.
+### Do I need to change my IP?
+No. Just wait the full **two‑week period**.
 
 ---
 
-## 💰 Deposits FAQ
+## Deposits FAQ
 
-### Deposits: How can I deposit $FLOWER in‑game?
+### How can I deposit $FLOWER in‑game?
 Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked wallet or enter another address.
 
 ---
 
-### Deposits: What tokens can I deposit?
+### What tokens can I deposit?
 Only **$FLOWER**. Other tokens are not recognized.
 
 ---
 
-### Deposits: I accidentally sent ETH (or another token). Can it be returned?
-No. The deposit contract only recognizes $FLOWER. Other tokens cannot be recovered.
+### I accidentally sent ETH (or another token). Can it be returned?
+No. The deposit contract only recognizes $FLOWER.
 
 ---
 
-### Deposits: Why is only $FLOWER accepted?
-The contract is designed specifically for $FLOWER to protect the game economy.
+### Why is only $FLOWER accepted?
+The contract is designed specifically for $FLOWER.
 
 ---
 
-### Deposits: My deposit isn’t showing
+### My deposit isn’t showing
 Open the **Gem icon**, select **Deposit $FLOWER**, confirm the correct network, and hit **Refresh**.
 
 ---
 
-## ⚠️ Game Errors FAQ
+## Game Errors FAQ
 
-### Errors: I get a white screen when opening the app
+### I get a white screen when opening the app
 Clear your browser cache:  
 - [Google Support](https://support.google.com/accounts/answer/32050)  
 - [Apple Support](https://support.apple.com/en-us/HT201265)
 
 ---
 
-### Errors: I am unable to claim my marketplace sale
+### I am unable to claim my marketplace sale
 Check for pending withdrawals. Complete or clear them before claiming sales.
 
 ---
@@ -101,11 +101,11 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 
 ---
 
-## 🔑 Account Verification FAQ
+## Account Verification FAQ
 
-### Verification: I cannot verify my Discord account
+### I cannot verify my Discord account
 **Discord**  
-1. Go to [this channel](https://discord.com/channels/880987707214544966/925940397237219369) and agree to terms.  
+1. Go to [this channel](https://discord.com/channels/880987707214544966/925940397237219369).  
 2. Go to [this channel](https://discord.com/channels/880987707214544966/1361122506655666367) and type `/verify`.  
 3. Return to the game and complete face verification.
 
@@ -118,55 +118,55 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 
 ---
 
-### Verification: I want to unlink my Discord or Telegram
-Unlinking is currently disabled to prevent misuse.  
+### I want to unlink my Discord or Telegram
+Unlinking is currently disabled.  
 [See Discord announcement](https://discord.com/channels/880987707214544966/1174503269238837408/1396928727040131094)
 
 ---
 
-## 🛡️ Bans & Re‑Verification FAQ
+## Bans & Re‑Verification FAQ
 
-### Bans: I accidentally created two accounts
+### I accidentally created two accounts
 Face verification cannot be reset or transferred. Play the new account for **30 days** before requesting re‑verification.
 
 ---
 
-### Bans: Marketplace requires face verification
-You must actively play the new account for **30 days** before re‑verification. Marketplace access is locked until then.
+### Marketplace requires face verification
+You must actively play the new account for **30 days** before re‑verification.
 
 ---
 
-### Bans: Will I get banned again if I scan my face on a new account?
+### Will I get banned again if I scan my face on a new account?
 No, but you must play for **30 days** before re‑verification.
 
 ---
 
-### Bans: Can I log in on a friend’s device?
+### Can I log in on a friend’s device?
 No. This is **account sharing** and results in a permanent ban.
 
 ---
 
-### Bans: I want to appeal my ban
+### I want to appeal my ban
 Submit a support ticket and wait for review. Appeals are case‑by‑case and permanent bans are rarely overturned.
 
 ---
 
-## 🕰️ Discontinued & Not Recommended FAQ
+## Discontinued & Not Recommended FAQ
 
-### Discontinued: I bought a Ronin Land pass
+### I bought a Ronin Land pass
 Bronze and Silver passes have expired. They were originally distributed via airdrop and are now resold by players. SunflowerLand does not support or guarantee their validity.
 
 ---
 
-### Discontinued: I bought a Sunflower Land account on OpenSea
+### I bought a Sunflower Land account on OpenSea
 We strongly advise against buying accounts. Metadata is often inaccurate, and items/progress may not match.  
 *"We do not recommend trading this NFT. Accounts may be banned and/or items may not match the account’s value."*
 
 ---
 
-## 🌐 Network Transactions FAQ
+## Network Transactions FAQ
 
-### Transactions: I have enough gas fee but cannot proceed
+### I have enough gas fee but cannot proceed
 Possible causes:  
 - Network congestion  
 - Gas limit too low  
@@ -176,12 +176,12 @@ Possible causes:
 
 ---
 
-### Transactions: Why does my transaction stay pending?
+### Why does my transaction stay pending?
 Usually due to **network congestion**. If your gas price is too low, it may remain pending. Use “speed up” in your wallet.
 
 ---
 
-### Transactions: What should I do if my transaction is stuck?
+### What should I do if my transaction is stuck?
 1. Check pending transactions.  
 2. Use “cancel” or “speed up.”  
 3. Increase gas price.  
